Updated to igblast v1.8.0

--- a/etc/mount.conf
+++ b/etc/mount.conf
@@ -1,5 +1,5 @@
 ## here list/uncomment folders and files which aren checked whether they are mounted in the container
 ## if not mounted via the the -v option of docker, the container will complain
-input/
-output/
-cache/
+#input/
+#output/
+#cache/
